# know

./: .gitignore  404.html  AGENTS.md  README.md  Taskfile.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.agent/workflows/: add-knowledge.md  maintain-quality.md  update-content.md  writing-rules.md
.github/workflows/: ci.yml
bookmarks/: index.html
bookmarks/Academic/: index.html
bookmarks/Academic/Research/: index.html
bookmarks/Dev/: index.html
bookmarks/Dev/AI/: index.html
bookmarks/Dev/Data/: index.html
bookmarks/Dev/Tool/: index.html
bookmarks/Finance/: index.html
bookmarks/Finance/Bank/: index.html
bookmarks/Finance/Crypto/: index.html
bookmarks/Finance/Market/: index.html
bookmarks/Game/: index.html
bookmarks/Game/Board/: index.html
bookmarks/Game/Digital/: index.html
bookmarks/Game/VR/: index.html
bookmarks/Life/: index.html
bookmarks/Life/Shopping/: index.html
bookmarks/Life/Utility/: index.html
bookmarks/Media/: index.html
bookmarks/Other/: index.html
bookmarks/Service/: index.html
dev/: index.html
dev/agent/: index.html
dev/wsl/: index.html
docs/: _sidebar.md  index.html  index.md  readme.md  rules.md
docs/bookmarks/: README.md  index.md
docs/dev/: git.md  index.md  readme.md
docs/dev/wsl/: index.md  (+1 more)
docs/life/: index.md  readme.md
docs/work/: index.md  readme.md
life/: index.html
life/tax/: index.html
rules/: index.html
scripts/: bookmark_manager.py  import_bookmarks.py  restructure_bookmarks.py  validate_links.py
search/: search_index.json
temporaries/: bookmarks_2026_01_11.html
(+155 files in other folders)
