[project]
name = "know"
version = "0.1.0"
description = "Multi-Knowledge Base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mkdocs", "mkdocs-material"]

[dependency-groups]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
